src/test/ui/issue-40288-2.stderr
error[E0621]: explicit lifetime required in the type of `y`
  --> $DIR/issue-40288-2.rs:19:5
   |
LL | fn lifetime_transmute_slice<'a, T: ?Sized>(x: &'a T, y: &T) -> &'a T {
   |                                                      - consider changing the type of `y` to `&'a T`
...
LL |     out[0]
   |     ^^^^^^ lifetime `'a` required

error[E0621]: explicit lifetime required in the type of `y`
  --> $DIR/issue-40288-2.rs:34:5
   |
LL | fn lifetime_transmute_struct<'a, T: ?Sized>(x: &'a T, y: &T) -> &'a T {
   |                                                       - consider changing the type of `y` to `&'a T`
...
LL |     out.head
   |     ^^^^^^^^ lifetime `'a` required

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0621`.
